--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
             <img class="move-right" src="https://i.ibb.co/SJsNprW/5415935184978698348.jpg" alt="Profile Image">
         </a>
     </div>
-    
-    <!-- Second Container for Hobbies and Experience -->
     <div class="port">
         <div class="content">
             <h1>HOBBIES & EXPERIENCE</h1>
@@ -48,6 +46,11 @@
                 </a>
             </div>
         </div>
+    </div>
+    <div class="contact">
+        <h1>Contact Me</h1>
+        <p>Email: <a href="mailto:anjiko333@gmail.com">anjiko333@gmail.com</a></p>
+        <p>Contact Number: +996777377377</p>
     </div>
 </body>
 </html>
