--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
     </div>
     <div class="port">
         <div class="content">
-            <h1>HOBBIES & EXPERIENCE</h1>
+            <h1>HOBBIES & INTERESTS</h1>
             <p>
                 Passionate about photography, graphic design, and painting. Also enjoys outdoor activities such as hiking,cycling and travelling. Experienced in developing creative solutions and working with teams to deliver high-quality projects.Love the art,write and read books.
             </p>
@@ -47,10 +47,19 @@
             </div>
         </div>
     </div>
-    <div class="contact">
+  <div class="contact">
         <h1>Contact Me</h1>
         <p>Email: <a href="mailto:anjiko333@gmail.com">anjiko333@gmail.com</a></p>
         <p>Contact Number: +996777377377</p>
     </div>
+<div class="skills">
+  <h1>MY SKILLS</h1>
+ <ul>
+   <li>Speak 4-languages</li>
+   <li>Can solve the problems with creative approach</li>
+   <li>Flexible and social-butterfly</li>
+   <li>Play the piano</li>
+   <li>Play volleyball</li>
+        </ul> 
 </body>
 </html>
