--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -47,19 +47,22 @@
             </div>
         </div>
     </div>
+  <div class="skills">
+  <h1>MY SKILLS</h1>
+ <ul>
+   <li>Communication — I easily connect with people, and they naturally gravitate towards me.</li>
+   <li>Creativity — I love creating new things, writing, and reading books.</li>
+   <li>Writing skills — I write my own texts and literary works</li>
+   <li>Musical skills — I play the piano</li>
+   <li>Intercultural communication — I speak four languages, which helps me communicate freely with people from different countries.</li>
+   <li>Responsibility — I always complete my tasks with a sense of duty and attention to detail.</li>
+   <li>Empathy and responsiveness — I am good at supporting people and always willing to help.</li>
+   <li>Adaptability — Through traveling, I’ve learned to adapt quickly to new environments and embrace new experiences.</li>    
+</ul> </div>
   <div class="contact">
         <h1>Contact Me</h1>
         <p>Email: <a href="mailto:anjiko333@gmail.com">anjiko333@gmail.com</a></p>
         <p>Contact Number: +996777377377</p>
     </div>
-<div class="skills">
-  <h1>MY SKILLS</h1>
- <ul>
-   <li>Speak 4-languages</li>
-   <li>Can solve the problems with creative approach</li>
-   <li>Flexible and social-butterfly</li>
-   <li>Play the piano</li>
-   <li>Play volleyball</li>
-        </ul> 
 </body>
 </html>
